--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             padding-bottom: 10px;
             padding-top: 15px;
         }
+        .card {
+            width: 16rem;
+            border: none;
+        }
     </style>
     <body class="trans-bg">
         <div class="jumbotron jumbotron-fluid light-bg">
@@ -55,7 +59,7 @@
                 <div class="col-lg-6 panel dark-bg">
                     <h2> Projects in Physics</h2>
                     <div class="row">
-                        <div class="card col-6 trans-bg" style="width: 16rem;">
+                        <div class="card col-6 trans-bg">
                             <div class="card-body">
                                 <h5 class="card-title">Angular Correlation: <br> 
                                     <i>pp &rightarrow; ttbar </i>at LHC
@@ -63,7 +67,7 @@
                                 <a href="BtechProjectReport-5th-Sem.pdf" class="btn btn-primary" target="_blank">Report</a>
                             </div>
                         </div>
-                        <div class="card col-6 trans-bg" style="width: 16rem;">
+                        <div class="card col-6 trans-bg">
                             <div class="card-body">
                                 <h5 class="card-title">General Solution to <br> 
                                     Forced Oscillators
@@ -76,7 +80,7 @@
                 <div class="col-lg-6 panel dark-bg">
                     <h2> About Myself</h2>
                     <div class="row">
-                        <div class="card col-6 trans-bg" style="width: 16rem;">
+                        <div class="card col-6 trans-bg">
                             <div class="card-body">
                                 <h5 class="card-title">One Page Resume <br>
                                     <small>updated 15 Oct 2019</small>
@@ -84,7 +88,7 @@
                                 <a href="Resume_Abhishek_Agarwal_15-Oct-2019.pdf" class="btn btn-info" target="_blank">Resume</a>
                             </div>
                         </div>
-                        <div class="card col-6 trans-bg" style="width: 16rem;">
+                        <div class="card col-6 trans-bg">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     If you want to visualise something with graphics contact me!
