Added new semester project report

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         #background {
             position: fixed;
             z-index: -1;
-            
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
@@ -72,10 +71,10 @@
                     <div class="row">
                         <div class="card col-6 trans-bg">
                             <div class="card-body">
-                                <h5 class="card-title">Angular Correlation: <br> 
-                                    <i>pp &rightarrow; ttbar </i>at LHC
+                                <h5 class="card-title">New Jet Finding <br> 
+                                    algorithms at LHC
                                 </h5>
-                                <a href="BtechProjectReport-5th-Sem.pdf" class="btn btn-primary" target="_blank">Report</a>
+                                <a href="Clustering_Algorithms_in_HEP_6th_Sem.pdf" class="btn btn-primary" target="_blank">Report</a>
                             </div>
                         </div>
                         <div class="card col-6 trans-bg">
@@ -84,6 +83,16 @@
                                     Forced Oscillators
                                 </h5>
                                 <a href="ForcedOscillations-6th-Sem.pdf" class="btn btn-primary" target="_blank">Report</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="card col-6 trans-bg">
+                            <div class="card-body">
+                                <h5 class="card-title">Angular Correlation: <br> 
+                                    <i>pp &rightarrow; ttbar </i>at LHC
+                                </h5>
+                                <a href="BtechProjectReport-5th-Sem.pdf" class="btn btn-primary" target="_blank">Report</a>
                             </div>
                         </div>
                     </div>
