--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div>
                     <h1 class="display-4">Abhishek Agarwal
                         <div style="text-align: float; font-size: medium;">
-                            ep17btech11001@iith.ac.in
+                            <a href="index1.html"> ep17btech11001@iith.ac.in </a>
                         </div>
                     </h1>
                 </div>
