High DPI handling

--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
             top: 50%;
             transform: translate(-50%, -50%);
         }
+        @media only screen and (min-width: 1200px) {
+            p, h2, .lead, .display-4 { font-size: 3em; }
+            a, h5 { font-size: 2em; }
+            .btn { font-size: 1.75em; }
+            .display-4 { font-size: 4.5em; }
+            .container { width: 100%; max-width: none; }
+        }
+        @media only screen and (min-width: 2160px) { 
+            p, h2, .lead, .display-4 { font-size: 6em; }
+            a, h5 { font-size: 4em; }
+            .btn { font-size: 3.5em; }
+            .display-4 { font-size: 9em; }
+        }
     </style>
     <body class="trans-bg">
         <video autoplay muted loop id="background">
@@ -52,7 +65,7 @@
                 <div>
                     <h1 class="display-4">Abhishek Agarwal
                         <div style="text-align: float; font-size: medium;">
-                            <a href="index1.html"> ep17btech11001@iith.ac.in </a>
+                            <a> ep17btech11001@iith.ac.in </a>
                         </div>
                     </h1>
                 </div>
@@ -119,10 +132,6 @@
                 </div>
             </div>
         </div>
-        <!-- <a class="btn btn-primary" href="Resume_Abhishek_Agarwal_15-Oct-2019.pdf" role="button" target="_blank">
-            Click here for my One Page Resume
-        </a> -->
-        
     </body>
     
     <script>
