High DPI handling

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             top: 50%;
             transform: translate(-50%, -50%);
         }
-        @media only screen and (min-width: 1200px) {
+        /* @media only screen and (min-width: 1200px) {
             p, h2, .lead, .display-4 { font-size: 3em; }
             a, h5 { font-size: 2em; }
             .btn { font-size: 1.75em; }
             .display-4 { font-size: 4.5em; }
             .container { width: 100%; max-width: none; }
-        }
+        } */
         @media only screen and (min-width: 2160px) { 
             p, h2, .lead, .display-4 { font-size: 6em; }
             a, h5 { font-size: 4em; }
