--- a/index1.html
+++ b/index1.html
@@ -20,7 +20,7 @@
   </script>
   <style>
     body {
-      padding-top: 56px;
+      padding-top: 5vh;
     }
 
     .dark-bg{
@@ -41,6 +41,50 @@
     .head {
       padding-top: 4%;
       padding-bottom: 5%;
+    }
+
+    @media (min-width: 1200px) { 
+      body {
+        font-size: 1vw !important;
+      }
+      .head {
+        margin-bottom: 10vh;
+      }
+      .btn {
+        font-size: 1.5vw;
+        padding: 1% 2% 1% 2%;
+        border-radius: 0.33vw;
+      }
+      .mb-5 {
+        margin-bottom: 3vh !important;
+      }
+      .py-4 {
+        padding-top: 3vh !important;
+      }
+      .card {
+        padding: 2vh 2vw 2vh 2vw;
+        margin: 1% 3% 2% 3%;
+      }
+      p {
+        font-size: 1.5vw;
+      }
+      h2 {
+        font-size: 2.5vw;
+      }
+      h4 {
+        font-size: 2vw;
+        padding-bottom: 2vh;
+      }
+      h1 {
+        font-size: 3.5vw;
+        padding-bottom: 2vh;
+      }
+      .container {
+        max-width: 80vw;
+      }
+      .row {
+        max-width: 100vw;
+      }
     }
   </style>
 
@@ -86,7 +130,7 @@
         <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
       </div> -->
       
-      <div class="col-lg-12 light-bg head text-center">
+      <div class="col-12 light-bg head text-center">
         <h1 class="font-weight-light">Abhishek Agarwal</h1>
         <h4> Final Year Undergrad <br> Indian Institute of Technology, Hyderabad </h4>
         <a class="btn btn-primary" href="Resume_Abhishek_Agarwal_15-Oct-2019.pdf" target="_blank">
@@ -95,11 +139,11 @@
       </div>
     </div>
 
-    <div class="card my-5 py-4 text-center dark-bg">
+    <div class="my-5 py-4 text-center dark-bg" style="margin-bottom: 0 !important; border-radius: 0;">
       <h1 class="text-white m-0">Research Projects </h1>
     </div>
 
-    <div class="row">
+    <div class="row dark-bg">
       <div class="col-md-4 mb-5">
         <div class="card h-100 light-bg">
           <div class="card-body">
@@ -107,7 +151,7 @@
             <p class="card-text">Preliminary comparison of newer clustering methods as jet finders at LHC, compared with FastJet's jet reconstruction. </p>
           </div>
           <div class="card-footer text-center">
-            <a href="Clustering_Algorithms_in_HEP_6th_Sem.pdf" class="btn btn-primary btn-sm" target="_blank">
+            <a href="Clustering_Algorithms_in_HEP_6th_Sem.pdf" class="btn btn-primary" target="_blank">
               Report
             </a>
           </div>
@@ -121,7 +165,7 @@
             <p class="card-text">General solution to a damped harmonic oscillator under an external force. A simple case study solved both analytically and numerically.</p>
           </div>
           <div class="card-footer text-center">
-            <a href="ForcedOscillations-6th-Sem.pdf" class="btn btn-primary btn-sm" target="_blank">
+            <a href="ForcedOscillations-6th-Sem.pdf" class="btn btn-primary" target="_blank">
               Report
             </a>
           </div>
@@ -135,13 +179,14 @@
             <p class="card-text">Analysis angular correlation of the hard final state in the <i>pp &rightarrow; ttbar</i> LHC like event.</p>
           </div>
           <div class="card-footer text-center">
-            <a href="BtechProjectReport-5th-Sem.pdf" class="btn btn-primary btn-sm" target="_blank">
+            <a href="BtechProjectReport-5th-Sem.pdf" class="btn btn-primary" target="_blank">
               Report
             </a>
           </div>
         </div>
       </div>
     </div>
+    <br>
   </div>
 
   <footer class="py-5 bg-dark">
