High DPI handling

--- a/index1.html
+++ b/index1.html
@@ -131,7 +131,7 @@
       </div> -->
       
       <div class="col-12 light-bg head text-center">
-        <h1 class="font-weight-light">Abhishek Agarwal</h1>
+        <h1 class="font-weight-bold">Abhishek Agarwal</h1>
         <h4> Final Year Undergrad <br> Indian Institute of Technology, Hyderabad </h4>
         <a class="btn btn-primary" href="Resume_Abhishek_Agarwal_15-Oct-2019.pdf" target="_blank">
           One Page Resume
