--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
       </div> -->
       
       <div class="col-lg-12 light-bg head text-center">
-        <h1 class="font-weight-bold">Abhishek Agarwal</h1>
+        <h1 class="font-weight-bold">
+          Abhishek Agarwal
+        </h1>
+        <p>ep17btech11001@iith.ac.in</p>
+
         <h4> Final Year Undergrad <br> Indian Institute of Technology, Hyderabad </h4>
         <a class="btn btn-primary" href="reports/Resume_Abhishek_Agarwal_15-Oct-2019.pdf" target="_blank">
           One Page Resume
