Added Top Tagging Report

--- a/index.html
+++ b/index.html
@@ -151,8 +151,22 @@
   <div class="my-5 py-4 text-center dark-bg" style="margin-bottom: 0 !important; border-radius: 0;">
     <h1 class="text-white m-0">Research Projects </h1>
   </div>
-
+    
   <div class="mid-panel row dark-bg">
+    <div class="col-md-6 col-lg-4 mb-5">
+      <div class="card h-100 light-bg">
+        <div class="card-body">
+          <h2 class="card-title">Aug 2020</h2>
+          <p class="card-text"> Novel data driven Top Tagger based on Deep Learning in <i>pp &rightarrow; ttbar</i> LHC like event.</p>
+        </div>
+        <div class="card-footer text-center">
+          <a href="reports/NovelTopTagging.pdf" class="btn btn-primary" target="_blank">
+            Report
+          </a>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-6 col-lg-4 mb-5">
       <div class="card h-100 light-bg">
         <div class="card-body">
@@ -180,7 +194,9 @@
         </div>
       </div>
     </div>
-    
+  </div>
+
+  <div class="mid-panel row dark-bg">
     <div class="col-md-6 col-lg-4 mb-5">
       <div class="card h-100 light-bg">
         <div class="card-body">
