--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -5,16 +5,17 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
     </head>
     <style>
         body {
             margin-left: 100px;
             font-family: 'Sriracha', cursive;
             background-size: cover;
-            background-image: url("back.jpg");
+            background-image: url("bg.jpg");
             background-repeat: no-repeat;
             height: 100vh;
+            /* overflow: hidden; */
         }
         .digit {
             border-radius: 10px;
@@ -23,7 +24,7 @@
             height: 100px;
             text-align: center;
             vertical-align: middle;
-            color: #c1e5f3;
+            color: #f0fbff;
         }
         .counters {
             line-height: 90px;
@@ -34,20 +35,29 @@
         }
         .banner {
             /* margin-top: 30vh; */
-            font-family: 'Open Sans', sans-serif;
-            font-size: 2em;
-            /* color: ; */
+            font-family: 'PT Sans Narrow', sans-serif;
+            font-size: 2.5em;
+            -webkit-text-fill-color: transparent;
+            background: -webkit-linear-gradient(transparent, transparent), url("back.jpg") repeat;
+            background: -o-linear-gradient(transparent, transparent);
+            -webkit-background-clip: text;
+            background-clip: text;
+            /* color: red; */
         }
         .right {
-            background-image: url("ila.jpg");
-            width: 50vw;
-            right: 0;
+            background-image: url("ila.png");
+            background-size: contain;
+            background-repeat: no-repeat;
             position: fixed;
+            top: 0;
+            right: 0;
+            width: 50vw;
+            height: 100vh;
         }
     </style>
     <body onmousedown="pop()">
         <div class="banner">
-            <h1 onmousedown=""><br><br>Its Ila's birthday in...</h1>
+            <h1 style="font-size: 3em;">Its Ila's birthday in...</h1>
         </div>
         <div class="digit"style="background-color: #1151ff;">
             <div id="days" class="counters"></div>
@@ -65,6 +75,10 @@
             <div id="seconds" class="counters"></div>
             <div class="addendum">Seconds</div>
         </div>
+        
+        <div class="banner">
+            <h1 id="visitors"> </h1>
+        </div>
         <div class="right">
             <!-- <img src="ila.jpg"/> -->
         </div>
@@ -81,8 +95,19 @@
             document.getElementById("hours").innerHTML = dT.getHours();
             document.getElementById("minutes").innerHTML = dT.getMinutes();
             document.getElementById("seconds").innerHTML = dT.getSeconds();
+            if(dT.getSeconds() % 10 === 0) pop();
             setTimeout(update, 1000);
         }
+
+        (function clicked() {
+            var xhr = new XMLHttpRequest();
+            xhr.open("GET", "https://api.countapi.xyz/hit/default/465bab91-0bcf-48d1-a335-0f11f4c099a3");
+            xhr.responseType = "json";
+            xhr.onload = function() {
+                document.getElementById("visitors").innerHTML = `This has already been seen <br>${this.response.value} times!`;
+            }
+            xhr.send();
+        })();
 
         function pop() {
             party.confetti(document.body, {
