--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -46,7 +46,7 @@
         }
         .right {
             background-image: url("ila.png");
-            background-size: contain;
+            background-size: cover;
             background-repeat: no-repeat;
             position: fixed;
             top: 0;
@@ -57,7 +57,7 @@
     </style>
     <body onmousedown="pop()">
         <div class="banner">
-            <h1 style="font-size: 3em;">Its Ila's birthday in...</h1>
+            <h1 style="font-size: 3em;">Its Ila's <br>birthday in...</h1>
         </div>
         <div class="digit"style="background-color: #1151ff;">
             <div id="days" class="counters"></div>
