--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -59,7 +59,10 @@
 
         @media (orientation: portrait) {
             body {
-                margin-top: 10%;
+                margin-top: 20vh;
+            }
+            .right {
+                background-position: 75% 0%;
             }
         }
     </style>
