--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -15,7 +15,7 @@
             background-image: url("bg.jpg");
             background-repeat: no-repeat;
             height: 100vh;
-            /* overflow: hidden; */
+            overflow: hidden;
         }
         .digit {
             border-radius: 10px;
