Worked on Mahabharat and new blog page

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -251,7 +251,7 @@
               <h5>2017 - 2021</h5>
               <p><em>Indian Institute of Technology Hyderabad</em></p>
               <p>
-                4 year's engineering course with emphasis on theoretical physics and methematics. Earned an additional minor's certificate by undertaking two extra semester's worth of courses in Computer Science.
+                4 year's engineering course with emphasis on theoretical physics and mathematics. Earned an additional minor's certificate by undertaking two extra semester's worth of courses in Computer Science.
               </p>
               <p>
                 Worked on Top Quark Reconstruction within the Standard Model of Physics under the supervision of Professor Priyatosh Bandhyopahdyay for my senior year.
