Made contacts and musings consistent, updated favicon

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -299,31 +299,27 @@
           </div>
         </div>
 
-      </div>
-    </section><!-- End Services Section -->
+      <!-- </div> -->
+    <!-- </section>End Services Section -->
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
+    <!-- <section id="contact" class="contact"> -->
+      <!-- <div class="container"> -->
 
         <div class="section-title">
           <h2>Contact</h2>
           <p>Feel free to contact me over email for business, talking about physics, games or software dev.</p>
         </div>
-
-        <div class="row">
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>abhiagar97@gmail.com</p>
-              </div>
-            </div>
-          </div>
+        <div class="col-lg-4 col-md-6 icon-box">
+          <!-- <div class="info"> -->
+            <!-- <div class="email"> -->
+          <div class="icon"><i class="bi bi-envelope"></i></div>
+          <h4 class="title">Email:</h4>
+          <p class="description">abhiagar97@gmail.com</p>
+            <!-- </div> -->
+          <!-- </div> -->
         </div>
-
       </div>
     </section><!-- End Contact Section -->
 
