--- a/attempts/3/index.html
+++ b/attempts/3/index.html
@@ -70,6 +70,10 @@
         <div class="banner">
             <h1 style="font-size: 3em;">Its Ila's <br>birthday in...</h1>
         </div>
+        <div class="digit"style="background-color: #11aaff;">
+            <div id="months" class="counters"></div>
+            <div class="addendum">Months</div>
+        </div>
         <div class="digit"style="background-color: #1151ff;">
             <div id="days" class="counters"></div>
             <div class="addendum">Days</div>
@@ -95,13 +99,14 @@
         </div>
     </body>
     <script type="text/javascript">
-        const target = new Date(2021, 09, 16, 0, 0, 0, 0);
+        const target = new Date(2023, 09, 16, 0, 0, 0, 0);
 
         const backColor = "#c1e5f3";
         
         function update() {
 
             let dT = new Date(target - new Date());
+            document.getElementById("months").innerHTML = dT.getMonth();
             document.getElementById("days").innerHTML = dT.getDate();
             document.getElementById("hours").innerHTML = dT.getHours();
             document.getElementById("minutes").innerHTML = dT.getMinutes();
