Added webm as backup video format

--- a/TheAgarwalBlog/simulations/1-conduction-of-heat/index.html
+++ b/TheAgarwalBlog/simulations/1-conduction-of-heat/index.html
@@ -216,9 +216,12 @@
         </p>
 
         <p>
-            <a href="sim.py">Click here</a> for the full code. Here is the result: <br> <br>
-            <video controls loop autoplay width="100%">
+            <a href="sim.py">Click here</a> for the full code. In case the below video isn't 
+            being played, <a href="animation.mp4">click here</a> to download the video as a file
+            and watch it locally. Here is the result: <br> <br>
+            <video playsinline controls loop autoplay width="100%">
                 <source src="animation.mp4" type="video/mp4" />
+                <source src="animation.webm" type="video/webm" />
             </video>
         </p>
 
