Added Tokenzation Economics report to the blog

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -297,6 +297,13 @@
             <h4 class="title"><a href="https://drpeabody.github.io/acad/index.html">Projects in Physics</a></h4>
             <p class="description">A breif overview of the projects and project reports from my research in physics</p>
           </div>
+          
+          <div class="col-lg-4 col-md-6 icon-box">
+            <div class="icon"><i class="bi bi-cash"></i></div>
+            <h4 class="title"><a href="assets/docs/Slice_of_Wonderland_Economic_Model.pdf">Report on Investment Tokenization</a></h4>
+            <p class="description">Revenue Analysis of a Marketplace for Tokenization and Sharing of Investments</p>
+          </div>
+
         </div>
 
       <!-- </div> -->
@@ -316,7 +323,7 @@
             <!-- <div class="email"> -->
           <div class="icon"><i class="bi bi-envelope"></i></div>
           <h4 class="title">Email:</h4>
-          <p class="description">abhiagar97@gmail.com</p>
+          <p class="description">abhishek.agarwal@alumni.iith.ac.in</p>
             <!-- </div> -->
           <!-- </div> -->
         </div>
