--- a/acad/index.html
+++ b/acad/index.html
@@ -141,7 +141,7 @@
       </h1>
       <p>ep17btech11001@iith.ac.in</p>
 
-      <h4> Final Year Undergrad <br> Indian Institute of Technology, Hyderabad </h4>
+      <h4> Alumni <br> Indian Institute of Technology, Hyderabad </h4>
       <a class="btn btn-primary" href="reports/Resume_Abhishek_Agarwal_15-Oct-2019.pdf" target="_blank">
           One Page Resume
       </a>
@@ -226,6 +226,20 @@
         <div class="card-footer text-center">
           <a href="SchrodingerSolver.html" class="btn btn-primary" target="_blank">
             I want to see it in Action!
+          </a>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-md-6 col-lg-4 mb-5">
+      <div class="card h-100 light-bg">
+        <div class="card-body">
+          <h2 class="card-title">April 2023</h2>
+          <p class="card-text">Analysing the Revenue for Marketplace of Tokenized Shares of Investments, are tokenized investments a scam?   </p>
+        </div>
+        <div class="card-footer text-center">
+          <a href="reports/Slice_of_Wonderland_Economic_Model.pdf" class="btn btn-primary" target="_blank">
+            Report
           </a>
         </div>
       </div>
