unified css for simulations and articles directory, added simulation to landing page

--- a/TheAgarwalBlog/simulations/1-conduction-of-heat/index.html
+++ b/TheAgarwalBlog/simulations/1-conduction-of-heat/index.html
@@ -5,21 +5,10 @@
         <script type="text/javascript" id="MathJax-script" async 
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"> 
         </script>
-        <style>
-            code {
-                text-align: center;
-                white-space: pre;
-            }
-            h1 {
-                padding-top: 10vh;
-            }
-            h1, h2, p {
-                padding-left: 10vw;
-                padding-right: 10vw;
-            }
-        </style>
+        <link href="../../assets/css/blog-style.css" rel="stylesheet">
     </head>
     <body>
+        <br>
         <h1> Conduction of Heat </h1>
         <h2> The Problem </h2>
         <p>
