Improved html slightly, renamed section services -> Musings in code

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -23,8 +23,8 @@
 
   <!-- BoxIcons used for the icons on the landing page of the blog -->
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"> -->
+  <!-- <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -56,7 +56,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Musings</span></a></li>
+          <li><a href="#musings" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Musings</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -218,8 +218,8 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- ======= Musings & Contacts Section ======= -->
+    <section id="musings" class="musings">
       <div class="container">
 
         <div class="section-title">
@@ -246,12 +246,8 @@
             <p class="description">Simulation of change in temperature over time of a square flat material sandwiched between hot and cold </p>
           </div>
         </div>
-    <!-- </section>End Services Section -->
 
-
-    <!-- ======= Contact Section ======= -->
-
-        <div class="section-title">
+        <div id="contact" class="section-title">
           <h2>Contact</h2>
           <p>Feel free to contact me over email for business, talking about physics, games or software dev.</p>
         </div>
