Made minor improvements to landing page, added blog articles section

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -198,17 +198,32 @@
           </div>
         </div>
 
-        <div id="contact" class="section-title">
-          <h2>Contact</h2>
-          <p>Feel free to contact me over email for business, talking about physics, games or software dev.</p>
-        </div>
-        <div class="col-lg-4 col-md-6 icon-box">
-          <div class="icon"><i class="bi bi-envelope"></i></div>
-          <h4 class="title">Email:</h4>
-          <p class="description">abhishek.agarwal@alumni.iith.ac.in</p>
-        </div>
       </div>
     </section><!-- End Contact Section -->
+
+    <!-- ======= Blog Section ======= -->
+    <section class="resume">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Blog Articles</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="resume-item">
+              <h4>Escalations in Human Conflict</h4>
+              <h5>2 Dec 2023</h5>
+              <p> An Essay about trying to understand the subjective definitions of being Good, 
+                and trying to reason how we can be Good in an increasingly morally ambiguous world.
+              </p>
+              <a href="articles/EscalationIsADevil.html">Read Essay</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -220,6 +235,7 @@
             I am a software developer and physics enthusiast currently working as Application Developer at Oracle Corporation, India. 
             If Im not working you would find me gaming, coding or walking. Fan of good wines, chocolates, gadgets and Batman.
           </p>
+          <br>
         </div>
 
         <div class="row">
@@ -236,24 +252,29 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 December 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>drpeabody.github.io</span></li>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Hometown:</strong> <span>Lucknow, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li> -->
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's of Technology</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhiagar97@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Undergrad:</strong> <span>IIT Hyderabad</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Engineering Physics</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Minor:</strong> <span>Computer Science</span></li>
                 </ul>
               </div>
             </div>
-            <p>
-              Im cool. What can I say.
-            </p>
+            <!-- <div id="contact" class="col-lg-8 pt-4 pt-lg-0 content" > -->
+              <h3 id="contact">Contact</h3>
+              <p>Feel free to contact me over email.</p>
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul>
+                    <li><i class="bi bi-envelope"></i><p>abhishek.agarwal@alumni.iith.ac.in</p></li>
+                    <li><i class="bi bi-envelope"></i><p>abhiagar97@gmail.com</p></li>
+                  </ul>
+                </div>
+              </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
