--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -176,6 +176,7 @@
         <div class="section-title">
           <h2>Musings</h2>
           <p> I often spend time on maintenance of multiple projects I have done in the past. Some of them are illustrated and linked below.</p>
+          <br>
         </div>
 
         <div class="row">
@@ -213,11 +214,14 @@
           <div class="col-lg-6">
             <div class="resume-item">
               <h4>Escalations in Human Conflict</h4>
-              <h5>2 Dec 2023</h5>
+              <h5>
+                2 Dec 2023
+                <a href="articles/EscalationIsADevil.html"> <span class="bi bi-chevron-right"></span>  Read Essay </a>
+              </h5>
               <p> An Essay about trying to understand the subjective definitions of being Good, 
                 and trying to reason how we can be Good in an increasingly morally ambiguous world.
               </p>
-              <a href="articles/EscalationIsADevil.html">Read Essay</a>
+              
             </div>
           </div>
         </div>
