Added JSCii Cam to landing page

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -112,7 +112,7 @@
             <div class="count-box">
               <i class="bi bi-pin-map"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Citites</strong> visited in lifetime.</p>
+              <p><strong>Cities</strong> visited in lifetime.</p>
             </div>
           </div>
 
@@ -183,7 +183,7 @@
           <div class="col-lg-4 col-md-6 icon-box">
             <div class="icon"><i class="bi bi-pen"></i></div>
             <h4 class="title"><a href="https://drpeabody.github.io/acad/index.html">Projects in Physics</a></h4>
-            <p class="description">A breif overview of the projects and project reports from my research in physics</p>
+            <p class="description">A brief overview of the projects and project reports from my research in physics</p>
           </div>
           
           <div class="col-lg-4 col-md-6 icon-box">
@@ -197,6 +197,14 @@
             <h4 class="title"><a href="simulations/1-conduction-of-heat/index.html">Heat Conduction Simulation</a></h4>
             <p class="description">Simulation of change in temperature over time of a square flat material sandwiched between hot and cold </p>
           </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box">
+            <div class="icon"><i class="bi bi-camera"></i></div>
+            <h4 class="title"><a href="simulations/4-ascii-encoded-video/index.html">ASCII Encoded Video</a></h4>
+            <p class="description">Watch the video recorded by your camera in Text with Matrix themed colors</p>
+          </div>
+          
         </div>
 
       </div>
