Added MRisk game to blog

--- a/TheAgarwalBlog/index.html
+++ b/TheAgarwalBlog/index.html
@@ -204,6 +204,11 @@
             <h4 class="title"><a href="simulations/4-ascii-encoded-video/index.html">ASCII Encoded Video</a></h4>
             <p class="description">Watch the video recorded by your camera in Text with Matrix themed colors</p>
           </div>
+          <div class="col-lg-4 col-md-6 icon-box">
+            <div class="icon"><i class="bi bi-globe2"></i></div>
+            <h4 class="title"><a href="games/MRisk/mrisk.html">MRisk</a></h4>
+            <p class="description">A Risk themed game made entirely from HTML + JS</p>
+          </div>
           
         </div>
 
