added more tules

--- a/TheAgarwalBlog/games/MRisk/mrisk-rules.html
+++ b/TheAgarwalBlog/games/MRisk/mrisk-rules.html
@@ -75,3 +75,8 @@ A player can choose to add as many armies as many times as they can afford every
 ### Action 2: Attack Territories
 
 Players can choose to attack any enemy territory initiating an attack from one of the neighbour territories that they own.
+There are 3 conditions for a valid attack:
+1. The initiating territory must be owned by the current player
+2. The attack target territory must be owned by the enemy 
+3. The initiating territory and target territory must be neighbours on the map.  
+Each territory has at most 8 neighbours when surrounded on all sides.
